# SpargeAttn-for-windows

./: pyproject.toml  requirements.txt  setup.py  simpleindex.toml  update_pyproject.py
.github/workflows/: main.yml
evaluate/: wan_example.py
evaluate/modify_model/: modify_wan.py
spas_sage_attn/: core.py
